--- a/ApiTestingWithAllvalidation/src/main/resources/application.properties
+++ b/ApiTestingWithAllvalidation/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=ApiTestingWithAllvalidation
 
-spring.datasource.url=jdbc:mysql://localhost:3306/ApiTestingWithAllvalidationApplication
+spring.datasource.url=jdbc:mysql://localhost:3306/httpVerbs
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
