--- a/APIGatewayUsingAPIGateWay/APIGatewayUsingAPIGateWay/src/main/resources/application.properties
+++ b/APIGatewayUsingAPIGateWay/APIGatewayUsingAPIGateWay/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=APIGatewayUsingAPIGateWay
+server.port=8080
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
+
+spring.cloud.gateway.routes[0].id=UserServiceUsingAPIGateWay
+spring.cloud.gateway.routes[0].uri=lb://UserServiceUsingAPIGateWay
+spring.cloud.gateway.routes[0].predicates[0]=Path=/users/**
+
+spring.cloud.gateway.routes[1].id=ProductServiceUsingAPIGateWay
+spring.cloud.gateway.routes[1].uri=lb://ProductServiceUsingAPIGateWay
+spring.cloud.gateway.routes[1].predicates[0]=Path=/products/**
