--- a/UserServiceUsingAPIGateWay/src/main/resources/application.properties
+++ b/UserServiceUsingAPIGateWay/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=UserServiceUsingAPIGateWay
+
+server.port=8081
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
+
+spring.datasource.url=jdbc:mysql://localhost:3306/user_service_using_apigateway
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
