--- a/ProductServiceUsingAPIGateWay/ProductServiceUsingAPIGateWay/src/main/resources/application.properties
+++ b/ProductServiceUsingAPIGateWay/ProductServiceUsingAPIGateWay/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/product_service_using_apigatew
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
+# JPA Configuration for MySQL
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
