--- a/UserServiceUsingAPIGateWay/src/main/resources/application.properties
+++ b/UserServiceUsingAPIGateWay/src/main/resources/application.properties
@@ -9,3 +9,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/user_service_using_apigateway
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
+# JPA Configuration
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
