Already perform some Operation using API gateway And Making some Comment In API Section for performing the request via API gate way

--- a/APIGatewayUsingAPIGateWay/APIGatewayUsingAPIGateWay/src/main/resources/application.properties
+++ b/APIGatewayUsingAPIGateWay/APIGatewayUsingAPIGateWay/src/main/resources/application.properties
@@ -4,10 +4,20 @@ server.port=8080
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
 
+# This is the First Micro Services Which i have Created and connected via API Gateway 
+# After making the request via API gate way Automatically request forward to the Specific MicroServices 
+# So the Main Microservice is the API One because all Request is going through This route only 
+
 spring.cloud.gateway.routes[0].id=UserServiceUsingAPIGateWay
 spring.cloud.gateway.routes[0].uri=lb://UserServiceUsingAPIGateWay
 spring.cloud.gateway.routes[0].predicates[0]=Path=/users/**
 
+# This is the Second Micro Services Which i have Created and connected via API Gateway 
+# After making the request via API gate way Automatically request forward to the Specific MicroServices 
+# So the Main Microservice is the API One because all Request is going through This route only 
+
 spring.cloud.gateway.routes[1].id=ProductServiceUsingAPIGateWay
 spring.cloud.gateway.routes[1].uri=lb://ProductServiceUsingAPIGateWay
 spring.cloud.gateway.routes[1].predicates[0]=Path=/products/**
+
+
