--- a/APIGatewayUsingAPIGateWay/APIGatewayUsingAPIGateWay/src/main/resources/application.properties
+++ b/APIGatewayUsingAPIGateWay/APIGatewayUsingAPIGateWay/src/main/resources/application.properties
@@ -21,4 +21,9 @@ spring.cloud.gateway.routes[1].id=ProductServiceUsingAPIGateWay
 spring.cloud.gateway.routes[1].uri=lb://ProductServiceUsingAPIGateWay
 spring.cloud.gateway.routes[1].predicates[0]=Path=/products/**
 
+spring.cloud.gateway.routes[2].id=EmployeeManagementSystemUsingAPIGateWay
+spring.cloud.gateway.routes[2].uri=lb://EmployeeManagementSystemUsingAPIGateWay
+spring.cloud.gateway.routes[2].predicates[0]=Path=/api/employees/**
+
+
 
