--- a/EmployeeManagementSystemUsingAPIGateWay/pom.xml
+++ b/EmployeeManagementSystemUsingAPIGateWay/pom.xml
@@ -31,6 +31,13 @@
 		<spring-cloud.version>2024.0.0</spring-cloud.version>
 	</properties>
 	<dependencies>
+	
+	<!-- Spring Boot Starter Validation: For Bean validation -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
