--- a/EmployeeManagementSystemUsingAPIGateWay/src/main/resources/application.properties
+++ b/EmployeeManagementSystemUsingAPIGateWay/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=EmployeeManagementSystemUsingAPIGateWay
+
+
+server.port=8083
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
+
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_management_systm_using_apigateway
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+# JPA Configuration
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
